--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.3",
+    "@radix-ui/react-popover": "1.0.6",
+    "clsx": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
