--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-popover": "1.0.6",
     "clsx": "^1.2.1",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -33,12 +34,14 @@
     "@storybook/react": "^7.0.25",
     "@storybook/react-vite": "^7.0.25",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/node": "^20.4.4",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "eslint-plugin-storybook": "^0.6.12",
