refactor: change eslint settings , viteConfig settings and tsConfig settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,15 +19,15 @@
     "noEmit": true,
     "jsx": "react",
     "baseUrl": ".",
-    "path": {
+    "paths": {
       "@/*": [
-        "src/*"
+        "./src/*"
       ],
       "@components/*": [
-        "src/components/*"
+        "./src/components/*"
       ],
       "@assets/*": [
-        "src/assets/*"
+        "./src/assets/*"
       ]
     },
     "types": [
