--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clsx": "^1.2.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^0.1.2",
