--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.4",
+    "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-popover": "1.0.6",
     "clsx": "^1.2.1",
+    "install": "^0.13.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.2"
+    "react-hook-form": "^7.45.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^0.1.2",
