--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-popover": "1.0.6",
+    "@types/camelcase": "^5.2.0",
+    "camel-case": "^4.1.2",
     "clsx": "^1.2.1",
     "install": "^0.13.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-router-dom": "^6.14.2",
     "zod": "^3.21.4"
   },
   "devDependencies": {
