--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-popover": "1.0.6",
     "@types/camelcase": "^5.2.0",
     "camel-case": "^4.1.2",
+    "classnames": "^2.3.2",
     "clsx": "^1.2.1",
     "install": "^0.13.0",
     "path": "^0.12.7",
