--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@types/camelcase": "^5.2.0",
     "camel-case": "^4.1.2",
     "classnames": "^2.3.2",
