--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-popover": "1.0.6",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@testing-library/jest-dom": "^6.1.3",
     "@types/camelcase": "^5.2.0",
     "camel-case": "^4.1.2",
     "classnames": "^2.3.2",
