--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.14.2",
     "zod": "^3.21.4"
   },
