--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/roboto": "^5.0.4",
     "@hookform/resolvers": "^3.1.1",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-menubar": "^1.0.3",
     "@radix-ui/react-popover": "1.0.6",
@@ -25,6 +26,7 @@
     "camel-case": "^4.1.2",
     "classnames": "^2.3.2",
     "clsx": "^1.2.1",
+    "framer-motion": "^10.16.4",
     "install": "^0.13.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
