--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/addon-essentials": "^7.0.25",
     "@storybook/addon-interactions": "^7.0.25",
     "@storybook/addon-links": "^7.0.25",
+    "@storybook/addon-onboarding": "^1.0.8",
     "@storybook/blocks": "^7.0.25",
     "@storybook/react": "^7.0.25",
     "@storybook/react-vite": "^7.0.25",
